--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App{
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.popup {
+    position: fixed;
+    top: 10vw;
+    left: 25vh;
+    width: 75vw;
+    height: 75vh;
+    background-color: #445565;
 }
 
-.App-link {
-  color: #61dafb;
+.popup .close {
+    display: inline-block;
+    padding: 15px 30px;
+    font-size: 18px;
+    font-weight: 700;
+
+    background-color: #4484c4;
+    color: #FFF;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    appearance: none;
+    cursor: pointer;
+
+    transition: 0.4s ease-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.popup .close:hover{
+     background: #223343;
+ }
+
+.popup h1 {
+    font-weight: 800;
+    font-size: xxx-large;
+}
+
+.popup .timer {
+    font-weight: 800;
+    font-size: 100px;
 }
